2004-07-28  James Turner  <james@worldforge.org>

	* test/metaquery.cpp: Applied Mike's changes to produce HTML output
	  as an option, so we can run metaquery from a cron job to drive
	  the website. (Go Eris! go atlas-c++ 0.6!)

2004-07-27  James Turner  <james@worldforge.org>

	* test/metaquery.cpp: Update the query test program to include
	  the connected client count of each server (for bear)
	* test/clientConnection: add code to start testing OOG chat, still
	  work in progress (need to have multiple test client processes
	  first, i think)

2004-07-18  James Turner  <james@worldforge.org>

	* test/tests.cpp: send the stub server child process a SIGTERM, so it
	  goes away cleanly when the tests are done.
	
	* Lots of cvsignore tweaks, mostly for OS-X specific cruft.

2004-07-18  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: fix a typo in my previous change, oops.
	* Eris/Log.cpp, Eris/LogStream.h: make logStreams respect the log level
	  setting.
	* Eris/ServerInfo.h: fix a copy-and-paste bug which made getServerName
	  return the hostname (IP) instead.
	* Eris.pbrpoj/project.pbxproj: Update XCode project for cleaned up
	  framework locations.

2004-07-12  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: Clean up the protected interface available to
	  people subclassing Entity, by moving many methods to be private.
	  Add a virtual wrapper around the VisibilityChanged signal, so
	  derived classes can easily hook into it.

	* tests/stubServer.cpp: Re-factor the test server to work as a child
	  process via fork(); this simplifies the tests on the client side.

2004-06-12  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec on glib2-devel.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-05-13  Al Riddoch  <alriddoch@zepler.org>

* Remove header files from the library source list, and remove a stray
  space from after a \ which was causing object files to get left out